force-app/main/default/objects/KimbleOne__Grade__c/KimbleOne__Grade__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Grade</label>
    <nameField>
        <label>Grade Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grades</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>