force-app/main/default/objects/KimbleOne__Grade__c/fields/KimbleOne__ResourceClass__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourceClass__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource Class</label>
    <referenceTo>KimbleOne__ResourceClass__c</referenceTo>
    <relationshipLabel>Grades</relationshipLabel>
    <relationshipName>Grades</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>