force-app/main/default/objects/KimbleOne__Grade__c/fields/KimbleOne__StandardRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StandardRate__c</fullName>
    <label>Z_Obsolete - Standard Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>