force-app/main/default/objects/KimbleOne__Grade__c/fields/KimbleOne__StandardRateUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StandardRateUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Standard Rate Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Grades (Standard Rate Unit Type)</relationshipLabel>
    <relationshipName>GradesStandardRate</relationshipName>
    <type>Lookup</type>
</CustomField>