force-app/main/default/objects/KimbleOne__Grade__c/validationRules/KimbleOne__ResourceClassMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__ResourceClassMandatory</fullName>
    <active>true</active>
    <description>Resource Class is Mandatory</description>
    <errorConditionFormula>ISBLANK(KimbleOne__ResourceClass__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__ResourceClass__c</errorDisplayField>
    <errorMessage>Resource Class must be entered</errorMessage>
</ValidationRule>